public/css/profile.css
body {
    font-family:  'Rouge Script', cursive;
    margin: 0;
    padding: 0;
    height: 100vh;
    /* background-color: #cadcd6;  */
}
h1{
   font-size: 5rem; 
}

h2{
font-size: 2.5rem;
margin: 0;
    padding: 0;
    color: #f4d5a9;
}
h4{
    color: #f4d5a9; 
    margin: 3rem;
}
h5, h6{
    color: #f4b6a9;
    font-family: 'marck-script', cursive;
    
}

.red-text{
    display: flex;
    flex-direction: column;
    align-self: center;
    justify-content: space-around;
}

.profile-container,
.form,
.card-container {
    text-align: start;
    padding: 25px;
    background-color: #305f47; 
    max-width: fit-content;
    margin: 10px;
    border-radius: 8px;
    display: flex;
   flex-direction: column;
}

.loginCard{
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 2rem;
}

.signupCard{
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 2rem;
    margin-top: 30px;
   
   
}

.profileCard{
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 2rem;
    margin-top: 30px;
   
}

#loginButton{
    justify-content: space-between;
    
}
.no-button{
    color: #a73030;
    font-family: 'marck-script', cursive;
}

#name {
    color: #ffffff; 
    font-size: 4rem;
}
.nav{
    background-color: transparent;
   box-shadow: none;
}

.itemForm{
    color:#f3e9da;
    font-size: 1.75rem;
}
.items{
    color: #f4d5a9;
    font-family: 'marck-script', cursive;
   
}
.itemList{
    overflow-y: scroll;
    display: flex;
    flex-direction: column;
    max-height: 200px;
}



.form-input,
.card-description {
    color: #f3e9da;
    font-style: italic;
    cursor: text;
    text-align: start;
    font-family: 'marck-script', cursive;
    
}

.itemsForm{
    font-size: 1rem;
}

.btn,
.btn-primary,
.modal-trigger {
    background-color: #edd5d4; 
    color: #a73030; 
    padding: 2px 16px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    
}

.modal-trigger {
    margin: 45px 0px;
}

.modal-content, #personID{
    font-size: larger;
}
.personID{
    font-size: x-large;
}

.btn{
    font-family: 'marck-script', cursive;
}

.btn-flat{
    font-family: 'marck-script', cursive;
}


.btn:disabled,
.btn-primary:disabled {
    opacity: 0.5; 
   
}

label {
    cursor: pointer;
    color: #faf0e3;
    display: block;
    padding: 10px;
    margin: 3px;
}

/* .card4 {
    background-color: #c64c4c;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    max-height: 300px;
    overflow: auto;
    margin: 30px 10px ;
} */

.card-content {
    padding: 35px;
    height: 200px;
    width: 300px;
    color:#ffffff;
    
}

.card-title {
    font-size: 3rem;
    color: #ffecec; 
}
.userPageName {
    font-size: 5em; 
}

.list h2 {
    font-size: 3.5em;
    padding: 2rem;
    color: #a73030;
}


.list ul {
    list-style:none;
    padding: 25px;
    margin: 15px;
    display: flex;
    flex-wrap: wrap;
}

.list li {
    background-color: #f5f5f5;
    border: 1px solid #f4d5a9;
    border-radius: 8px;
    margin: 15px;
    max-width: 200px;
    max-height: 200px;
    padding: 25px;
    font-size: 2rem;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;

}

.modal {
    max-width: 70%;
    margin: auto;
}

.modal-content {
    padding: 24px;
}

.modal-footer {
    display: flex;
    justify-content: space-between;
}

.card-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start; 
}

ul li:before {    
    font-family: 'FontAwesome';
    content: '\f06b';
    margin:0 5px 0 -25px;
    color: #e35d5d;
}


@media (max-width: 600px) {
    body {
        font-family:  'Rouge Script', cursive;
        margin: 0;
        padding: 0;
        display: flex;
        flex-direction: column; /* column layout for small screens */
        height: 100vh; 
        background-color: #96AFAD; 
    }
    .red-text{
        display: flex;
        flex-direction: column;
        align-self: center;
        justify-content: space-around;
    }
}

